--- a/02_ERA5.ipynb
+++ b/02_ERA5.ipynb
@@ -66,7 +66,64 @@
     "5. Go back down on the page and click on Submit Form\n",
     "6. Click on download, cancel, then right click on the download button and copy the link path, then paste it on the cell bellow besides the `wget` command\n",
     "\n",
-    "Remark: It should be around 1Go"
+    "Remark: It should be around 1Go\n",
+    "\n",
+    "Other Remark: using cdsapi...\n",
+    "\n",
+    "Copernicus also provides a python module `cdsapi` to handle files download. \n",
+    "\n",
+    "On the same screeen where you clicked `download`, clicking `Show API request`provides you the code copied in the next cell. *Here, it is commented out, because cdsapi does not work in binder. But it would work on a local installation. see https://cds.climate.copernicus.eu/api-how-to for details*\n",
+    "\n",
+    "This API ([Application Programming Interface](https://www.howtogeek.com/343877/what-is-an-api/)) is valid for the entire Copernicus climate and atmosphere data store, and particularly useful for systematic downloads\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "import cdsapi\n",
+    "\n",
+    "c = cdsapi.Client()\n",
+    "\n",
+    "c.retrieve(\n",
+    "    'reanalysis-era5-single-levels-monthly-means',\n",
+    "    {\n",
+    "        'product_type': 'monthly_averaged_reanalysis',\n",
+    "        'variable': '2m_temperature',\n",
+    "        'year': [\n",
+    "            '1979', '1980', '1981',\n",
+    "            '1982', '1983', '1984',\n",
+    "            '1985', '1986', '1987',\n",
+    "            '1988', '1989', '1990',\n",
+    "            '1991', '1992', '1993',\n",
+    "            '1994', '1995', '1996',\n",
+    "            '1997', '1998', '1999',\n",
+    "            '2000', '2001', '2002',\n",
+    "            '2003', '2004', '2005',\n",
+    "            '2006', '2007', '2008',\n",
+    "            '2009', '2010', '2011',\n",
+    "            '2012', '2013', '2014',\n",
+    "            '2015', '2016', '2017',\n",
+    "            '2018', '2019', '2020',\n",
+    "            '2021',\n",
+    "        ],\n",
+    "        'month': [\n",
+    "            '01', '02', '03',\n",
+    "            '04', '05', '06',\n",
+    "            '07', '08', '09',\n",
+    "            '10', '11', '12',\n",
+    "        ],\n",
+    "        'time': '00:00',\n",
+    "        'format': 'netcdf',\n",
+    "    },\n",
+    "    'download.nc')\n",
+    "\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
@@ -729,9 +786,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:erca]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-erca-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
